# Nemotron-AB

./: .dockerignore  .editorconfig  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  NOTICE  README.md  docker-compose.demo.yml  docker-compose.yml  package-lock.json  pyproject.toml  requirements-docker.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  demo-pages.yml
app/: __init__.py  campaign_assets.py  chroma_langchain.py  db.py  job_tasks_worker.py  langchain_eval.py  models.py  persona_where.py  queue_worker.py  streamlit_app.py  worker_main.py
app/services/: validator_runner.py
apps/api/: main.py  requirements.txt
apps/web/: .env.example  Dockerfile  package.json
backend/: app.py  deps.py  main.py  requirements.txt
backend/routers/: __init__.py  jobs.py  meta.py  notifications.py
backend/schemas/: __init__.py  jobs.py
backend/services/: __init__.py  job_enqueue.py  job_payload.py  job_progress.py  job_validation.py  population_estimate.py
deploy/systemd/: marketing-streamlit.service  marketing-worker.service
docs/: database.md  demo-deploy.md  llm-providers.md  project-overview.md  vectordb-metadata.md
examples/: prompt_schema.json  sample_campaign_one.json  sample_campaigns.json  sample_persona.json
frontend/: .env.example  Dockerfile  Dockerfile.demo  next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: AppShell.tsx  BrowserNotificationListener.tsx  BrowserNotificationSettings.tsx  CompletedReportsPanel.tsx  (+6 more)
nemotron_ab/: campaign_assets.py  chroma_langchain.py  config.py  db.py  db_engine.py  job_tasks_worker.py  key_reasons.py  langchain_eval.py  llm_provider.py  llm_usage.py  models.py  paths.py  persona_filter_schema.py  persona_population_cache.py  persona_retrieval.py  persona_where.py  prompt_profile.py  queue_worker.py  regions.py  report_synthesis.py  torch_device.py  worker_main.py
script/: benchmark_ollama.py  build_vectordb.py  download_data.py  marketing_validator.py  run_pilot.py  sample_campaign_one.json  sample_campaigns.json  sample_personas_10_49.jsonl  sample_personas_20_59.jsonl  test_ollama_multimodal.py
scripts/: ab_validator.py  benchmark_embedding_models.py  benchmark_ollama.py  build_manifest.py  build_sex_age_cache.py  build_vectordb.py  download_data.py  run_pilot.py  sanity_check_vectordb.py  start_worker.sh  test_ollama_multimodal.py
tests/: README.md  conftest.py
(+56 files in other folders)
